# experimental

./: README.md
overall_poc/: Cargo.toml  README.md  index.html
overall_poc/src/: main.rs
passing_variables_wasm/: Cargo.toml  debug.wasm
passing_variables_wasm/src/: main.rs  memory.rs
test_db/: Cargo.toml  README.md
test_db/rusqlite-db/: Cargo.toml
test_db/rusqlite-db/src/: main.rs
test_db/sqlite-db/: Cargo.toml
test_db/sqlite-db/src/: main.rs
test_wamr/: Cargo.toml  README.md
test_wamr/src/: main.rs
test_wasm/: Cargo.toml  README.md  sub.wasm
test_wasm/src/: main.rs
test_wasm/wasm-generator/: package-lock.json  package.json
test_wasm/wasm-generator/assembly/: index.ts
web_server_poc/: Cargo.toml  README.md  index.html
web_server_poc/src/: actix.rs  axum.rs  main.rs  may_mini.rs  tiny_http.rs
