[package]
name = "web_server_poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "may_minihttp"
path = "src/may_mini.rs"

[[bin]]
name = "actix"
path = "src/actix.rs"

[[bin]]
name = "axum"
path = "src/axum.rs"

[[bin]]
name = "tiny-http"
path = "src/tiny_http.rs"

[dependencies]
actix-web = "4.10.2"
axum = "0.8.1"
may_minihttp = "0.1.11"
psutil = "3.0.0"
tiny_http = "0.12.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
